--- a/Network.Rest.MEF/Network.Rest.MEF.csproj
+++ b/Network.Rest.MEF/Network.Rest.MEF.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{94D114DE-DA48-4060-9B7A-3059BF75E87D}</ProjectGuid>
+    <ProjectGuid>{75A1C6F7-756C-494A-9B21-8C2BCD2F809D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MEF.Bonjour</RootNamespace>
-    <AssemblyName>MEF.Bonjour</AssemblyName>
+    <RootNamespace>Network.Rest.MEF</RootNamespace>
+    <AssemblyName>Network.Rest.MEF</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,28 +39,27 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Xml.Linq">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Data.DataSetExtensions">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Catalog.cs" />
+    <Compile Include="RestServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServicePart.cs" />
-    <Compile Include="ServicePartDefinition.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Bonjour.NET\Network.Bonjour.csproj">
-      <Project>{CA2E95A3-CF9D-4524-85FC-12CAD9D81479}</Project>
-      <Name>Network.Bonjour</Name>
+    <ProjectReference Include="..\Rest\Network.Rest.csproj">
+      <Project>{3FFE9D8C-3914-4DD1-BB7C-8D4359216806}</Project>
+      <Name>Network.Rest</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DnsResolver\Network.Dns.csproj">
-      <Project>{36528547-53DC-46CD-8C97-1BAE69262B00}</Project>
-      <Name>Network.Dns</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SD\Network.ZeroConf.csproj">
-      <Project>{2B2D41E0-DBC7-4075-873C-394D02448281}</Project>
-      <Name>Network.ZeroConf</Name>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
