--- a/Network.Bonjour.Services/Network.Bonjour.Services.csproj
+++ b/Network.Bonjour.Services/Network.Bonjour.Services.csproj
@@ -6,13 +6,14 @@
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{8CC2B14D-E24B-41A8-AB93-17F130905E29}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Network.Bonjour.Pear</RootNamespace>
-    <AssemblyName>Network.Bonjour.Pear</AssemblyName>
+    <RootNamespace>Network.Bonjour.Services</RootNamespace>
+    <AssemblyName>Network.Bonjour.Services</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <StartupObject>Network.Bonjour.Services.Pear.AirDiskService</StartupObject>
+    <StartupObject>
+    </StartupObject>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
@@ -75,8 +76,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clients\RaopClient.cs" />
+    <Compile Include="Clients\RaopMessage.cs" />
     <Compile Include="Pear\AirDiskService.cs" />
+    <Compile Include="Pear\Airplay.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Servers\RaopServer.cs" />
     <Compile Include="WebDav.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -87,6 +92,14 @@
     <ProjectReference Include="..\DnsResolver\Network.Dns.csproj">
       <Project>{36528547-53DC-46CD-8C97-1BAE69262B00}</Project>
       <Name>Network.Dns</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Network.Rest\Network.Rest.csproj">
+      <Project>{13A68F9C-F095-409E-A97D-A05FFCDCE210}</Project>
+      <Name>Network.Rest</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Network.Rtsp\Network.Rtsp.csproj">
+      <Project>{BAEE9533-AB81-4057-BE2A-17857F1DD809}</Project>
+      <Name>Network.Rtsp</Name>
     </ProjectReference>
     <ProjectReference Include="..\Network\Network.csproj">
       <Project>{C05DF064-DD81-49AE-91D2-9D8BBCC76F1F}</Project>
