match assembly names to project names

--- a/Bonjour.NET/Network.Bonjour.csproj
+++ b/Bonjour.NET/Network.Bonjour.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Network.Bonjour</RootNamespace>
-    <AssemblyName>Bonjour.NET</AssemblyName>
+    <AssemblyName>Network.Bonjour</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
