--- a/UPnP/Network.UPnP.Services.csproj
+++ b/UPnP/Network.UPnP.Services.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Network.UPnP</RootNamespace>
-    <AssemblyName>UPnP</AssemblyName>
+    <AssemblyName>Network.UPnP</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
