--- a/SD/Network.ZeroConf.csproj
+++ b/SD/Network.ZeroConf.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Network.ZeroConf</RootNamespace>
-    <AssemblyName>Services.NET</AssemblyName>
+    <AssemblyName>Network.ZeroConf</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
